--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ language: 'en-uk'
 baseurl: /
 
 # Website info
-title: Ghost
+title: candicodeit
 description: The professional publishing platform
 cover: assets/images/blog-cover.jpg
 logo: assets/images/blog-icon.png
@@ -22,7 +22,7 @@ navigation: True # show the navbar links
 subscribers: True # you need to connect an external service for this to work,
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
-twitter: tryghost # replace by your username
+twitter: candicodeit # replace by your username
 facebook: ghost # replace by your username
 
 # Disqus
