--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ feed:
 safe: False
 lsi: False
 username: candicodeit
-repo: githubpages
+repo: githubpages/
 branch: master
 relative_source: ../
 destination: ../jasper2-pages/
