changed url to assets

--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ baseurl: /
 # Website info
 title: candicodeit
 description: site controlled by Candi
-cover: assets/images/blog-cover.jpg
-logo: assets/images/blog-icon.png
-logo_dark: assets/images/favicon.png
-favicon: assets/images/favicon.png
+cover: /assets/images/blog-cover.jpg
+logo: /assets/images/blog-icon.png
+logo_dark: /assets/images/favicon.png
+favicon: /assets/images/favicon.png
 production_url: https://candicodeit.github.io/githubpages/
 source_url: https://github.com/candicodeit/githubpages/
 
