--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ lsi: False
 username: candicodeit
 repo: githubpages/
 branch: master
-relative_source: ../
+relative_source: ../githubpages/
 destination: ../jasper2-pages/
 production_url:  https://candicodeit.github.io/githubpages/
 source_url:  https://github.com/candicodeit/githubpages/
