--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ paginate: 100 # it will paginate after this number
 language: 'en-us'
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /
+baseurl: /githubpages/
 
 # Website info
 title: candicodeit
