--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ subscribers: True # you need to connect an external service for this to work,
 # by editing `_includes/subscribe-form.html`
 twitter: candicodeit # replace by your username
 instagram: candicodeit # replace by your username
+tumblr: candicodeit
 
 # Disqus
 disqus: False
