add goodreads url

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ twitter: candicodeit # replace by your username
 instagram: candicodeit # replace by your username
 tumblr: candicodeit
 github: candicodeit
+goodreads: https://www.goodreads.com/review/list/3402800-candi?shelf=professional
 
 # Disqus
 disqus: True
