--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ paginate: 100 # it will paginate after this number
 language: 'en-us'
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /githubpages/
+baseurl: /
 
 # Website info
 title: <candicodeit />
@@ -14,7 +14,7 @@ cover: assets/images/blog-cover.jpg
 logo:
 logo_dark:
 favicon: assets/images/icon-code.png
-production_url: https://candicodeit.github.io/githubpages/
+production_url: http://candicode.it/
 source_url: https://github.com/candicodeit/githubpages/
 
 # Social info
