--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ repo: githubpages
 branch: master
 relative_source: ../githubpages/
 destination: ../jasper2-pages/
-production_url:  https://candicodeit.github.io/githubpages/
+production_url:  http://candicode.it/
 source_url:  https://github.com/candicodeit/githubpages/
 
 exclude:
